Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36067

Assertion failure in TABLE_SHARE::init_from_sql_statement_string

    XMLWordPrintable

Details

    Description

      bb-11.7-release 2d971709a8b96ebd71c4a5d2ca74ee6f72ad0355

      sql/table.cc:3650: int TABLE_SHARE::init_from_sql_statement_string(THD*, bool, const char*, size_t): Assertion `!thd->is_error()' failed.
       
      (rr) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x00001a9f55f0a859 in __GI_abort () at abort.c:79
      #2  0x00001a9f55f0a729 in __assert_fail_base (fmt=0x1a9f560a0588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55c5c406f1c4 "!thd->is_error()", 
          file=0x55c5c406e6e0 "/data/MDEV-36067/bb-11.7-release/sql/table.cc", line=3650, function=<optimized out>) at assert.c:92
      #3  0x00001a9f55f1bfd6 in __GI___assert_fail (assertion=0x55c5c406f1c4 "!thd->is_error()", file=0x55c5c406e6e0 "/data/MDEV-36067/bb-11.7-release/sql/table.cc", line=3650, 
          function=0x55c5c406f1d8 "int TABLE_SHARE::init_from_sql_statement_string(THD*, bool, const char*, size_t)") at assert.c:101
      #4  0x000055c5c324ec84 in TABLE_SHARE::init_from_sql_statement_string (this=0x7933082ce6b0, thd=0x793308000d48, write=false, 
          sql=0x55c5c42fa420 "CREATE TABLE metadata_locks(OBJECT_TYPE VARCHAR(64) not null comment 'Object type. One of BACKUP, COMMIT, EVENT, FUNCTION, GLOBAL, LOCKING SERVICE, PROCEDURE, SCHEMA, TABLE, TABLESPACE, TRIGGER (unuse"..., sql_length=1487) at /data/MDEV-36067/bb-11.7-release/sql/table.cc:3650
      #5  0x000055c5c37cbb3e in pfs_discover_table (hton=0x55c5c6c08348, thd=0x793308000d48, share=0x7933082ce6b0) at /data/MDEV-36067/bb-11.7-release/storage/perfschema/ha_perfschema.cc:72
      #6  0x000055c5c34db553 in discover_handlerton (thd=0x793308000d48, plugin=0x793308210c98, arg=0x7933082ce6b0) at /data/MDEV-36067/bb-11.7-release/sql/handler.cc:6632
      #7  0x000055c5c31065bb in plugin_foreach_with_mask (thd=0x793308000d48, func=0x55c5c34db4e0 <discover_handlerton(THD*, plugin_ref, void*)>, type=1, state_mask=8, arg=0x7933082ce6b0)
          at /data/MDEV-36067/bb-11.7-release/sql/sql_plugin.cc:2546
      #8  0x000055c5c34db7d5 in ha_discover_table (thd=0x793308000d48, share=0x7933082ce6b0) at /data/MDEV-36067/bb-11.7-release/sql/handler.cc:6676
      #9  0x000055c5c3245105 in open_table_def (thd=0x793308000d48, share=0x7933082ce6b0, flags=11) at /data/MDEV-36067/bb-11.7-release/sql/table.cc:698
      #10 0x000055c5c33ede24 in tdc_acquire_share (thd=0x793308000d48, tl=0x79330804d0c0, flags=3, out_table=0x14b84725e310) at /data/MDEV-36067/bb-11.7-release/sql/table_cache.cc:855
      #11 0x000055c5c3022dc6 in open_table (thd=0x793308000d48, table_list=0x79330804d0c0, ot_ctx=0x14b84725e680) at /data/MDEV-36067/bb-11.7-release/sql/sql_base.cc:2107
      #12 0x000055c5c302779b in open_and_process_table (thd=0x793308000d48, tables=0x79330804d0c0, counter=0x14b84725e744, flags=1090, prelocking_strategy=0x14b84725e748, has_prelocking_list=false, 
          ot_ctx=0x14b84725e680) at /data/MDEV-36067/bb-11.7-release/sql/sql_base.cc:4195
      #13 0x000055c5c302884b in open_tables (thd=0x793308000d48, options=..., start=0x14b84725e730, counter=0x14b84725e744, flags=1090, prelocking_strategy=0x14b84725e748)
          at /data/MDEV-36067/bb-11.7-release/sql/sql_base.cc:4681
      #14 0x000055c5c301ed66 in open_tables (thd=0x793308000d48, tables=0x14b84725e730, counter=0x14b84725e744, flags=1090, prelocking_strategy=0x14b84725e748)
          at /data/MDEV-36067/bb-11.7-release/sql/sql_base.h:273
      #15 0x000055c5c302a4b4 in open_normal_and_derived_tables (thd=0x793308000d48, tables=0x793308181060, flags=1090, dt_phases=3) at /data/MDEV-36067/bb-11.7-release/sql/sql_base.cc:5715
      #16 0x000055c5c302a67e in open_tables_only_view_structure (thd=0x793308000d48, table_list=0x793308181060, can_deadlock=false) at /data/MDEV-36067/bb-11.7-release/sql/sql_base.cc:5766
      #17 0x000055c5c31a6ca5 in fill_schema_table_by_open (thd=0x793308000d48, mem_root=0x14b847260810, is_show_fields_or_keys=false, table=0x793308021ce0, 
          schema_table=0x55c5c4b7c468 <schema_tables+2952>, orig_db_name=0x79330801f4a8, orig_table_name=0x793308040b30, open_tables_state_backup=0x14b847260850, can_deadlock=false)
          at /data/MDEV-36067/bb-11.7-release/sql/sql_show.cc:4872
      #18 0x000055c5c31a9080 in get_all_tables (thd=0x793308000d48, tables=0x793308018430, cond=0x0) at /data/MDEV-36067/bb-11.7-release/sql/sql_show.cc:5665
      #19 0x000055c5c31bb5b6 in get_schema_tables_result (join=0x79330801a020, executed_place=PROCESSED_BY_JOIN_EXEC) at /data/MDEV-36067/bb-11.7-release/sql/sql_show.cc:9689
      #20 0x000055c5c31403c5 in JOIN::exec_inner (this=0x79330801a020) at /data/MDEV-36067/bb-11.7-release/sql/sql_select.cc:5007
      #21 0x000055c5c313f76d in JOIN::exec (this=0x79330801a020) at /data/MDEV-36067/bb-11.7-release/sql/sql_select.cc:4829
      #22 0x000055c5c3140f73 in mysql_select (thd=0x793308000d48, tables=0x793308018430, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2701920768, 
          result=0x793308019ff8, unit=0x793308005270, select_lex=0x793308017d98) at /data/MDEV-36067/bb-11.7-release/sql/sql_select.cc:5362
      #23 0x000055c5c31308ce in handle_select (thd=0x793308000d48, lex=0x793308005190, result=0x793308019ff8, setup_tables_done_option=0) at /data/MDEV-36067/bb-11.7-release/sql/sql_select.cc:633
      #24 0x000055c5c30dc42d in execute_sqlcom_select (thd=0x793308000d48, all_tables=0x793308018430) at /data/MDEV-36067/bb-11.7-release/sql/sql_parse.cc:6191
      #25 0x000055c5c30d4406 in mysql_execute_command (thd=0x793308000d48, is_called_from_prepared_stmt=false) at /data/MDEV-36067/bb-11.7-release/sql/sql_parse.cc:3979
      #26 0x000055c5c30e0e6d in mysql_parse (thd=0x793308000d48, rawbuf=0x793308017ce0 "SELECT * FROM `information_schema`.`TABLES`", length=43, parser_state=0x14b8472622a0)
          at /data/MDEV-36067/bb-11.7-release/sql/sql_parse.cc:7915
      #27 0x000055c5c30ce1fb in dispatch_command (command=COM_QUERY, thd=0x793308000d48, packet=0x79330800b329 "SELECT * FROM `information_schema`.`TABLES`", packet_length=43, blocking=true)
          at /data/MDEV-36067/bb-11.7-release/sql/sql_parse.cc:1902
      #28 0x000055c5c30ccd84 in do_command (thd=0x793308000d48, blocking=true) at /data/MDEV-36067/bb-11.7-release/sql/sql_parse.cc:1415
      #29 0x000055c5c32aec15 in do_handle_one_connection (connect=0x1e1d2c080588, put_in_cache=true) at /data/MDEV-36067/bb-11.7-release/sql/sql_connect.cc:1415
      #30 0x000055c5c32ae9ad in handle_one_connection (arg=0x1e1d2c080588) at /data/MDEV-36067/bb-11.7-release/sql/sql_connect.cc:1327
      #31 0x000055c5c37cf2a9 in pfs_spawn_thread (arg=0x1e1d2bff9348) at /data/MDEV-36067/bb-11.7-release/storage/perfschema/pfs.cc:2198
      #32 0x000067e90d8be609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #33 0x00001a9f56007353 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      I didn't come up with a minimal test case, as the failure I was getting was too unreliable, and removing seemingly unimportant parts would make it disappear.
      What I was using to get the rr profile was this:

      --disable_result_log
       
      CREATE USER rqg@localhost;
      GRANT ALL ON *.* TO rqg@localhost;
      --connect (con7_3,localhost,rqg,,)
      --connect (con8_3,localhost,rqg,,)
      --connect (con12_3,localhost,root,,)
      SELECT db, name, type FROM mysql.proc;
      --connection con8_3
      CREATE OR REPLACE FUNCTION test.dml_function_47256 () RETURNS INT RETURN 1;
      CREATE OR REPLACE FUNCTION test.dml_function_47256 () RETURNS INT RETURN 1;
      --connection con7_3
      --send
        OPTIMIZE TABLE `mysql`.`proc`;
       
      --connection default
      --source include/restart_mysqld.inc
      --disable_result_log
      SELECT * FROM `information_schema`.`TABLES`;
      DROP USER rqg@localhost;
      DROP FUNCTION test.dml_function_47256;
      

      but the worst part was the command line options which hadn't undergone almost any simplification:

      perl ./mtr main.t --mysqld=--plugin-maturity=gamma --mysqld=--open-files-limit=32190 --mysqld=--local-infile=TRUE --mysqld=--connect-timeout=10 --mysqld=--secure-file-priv= --mysqld=--log-basename=poodle --mysqld=--debug-no-sync=FALSE --mysqld=--port-open-timeout=0 --mysqld=--log-bin-trust-function-creators=FALSE --mysqld=--key-buffer-size=134217728 --mysqld=--sort-buffer-size=2097152 --mysqld=--max-heap-table-size=16777216 --mysqld=--loose-aria-pagecache-buffer-size=134217728 --mysqld=--loose-feedback-user-info= --mysqld=--loose-feedback-debug-startup-interval=300 --mysqld=--loose-feedback-debug-first-interval=86400 --mysqld=--loose-feedback-debug-interval=604800 --mysqld=--loose-innodb-buffer-pool-size=134217728 --mysqld=--loose-innodb-lru-scan-depth=1536 --mysqld=--loose-innodb-write-io-threads=4 --mysqld=--loose-innodb-read-io-threads=4 --mysqld=--loose-innodb-log-buffer-size=16777216 --mysqld=--loose-innodb-log-file-size=100663296 --mysqld=--slave-net-timeout=60 --mysqld=--loose-disable-performance-schema --mysqld=--loose-performance-schema-accounts-size=-1 --mysqld=--loose-performance-schema-digests-size=-1 --mysqld=--loose-performance-schema-hosts-size=-1 --mysqld=--loose-performance-schema-users-size=-1 --mysqld=--loose-performance-schema-max-mutex-instances=-1 --mysqld=--loose-performance-schema-max-rwlock-instances=-1 --mysqld=--loose-performance-schema-max-cond-instances=-1 --mysqld=--loose-performance-schema-max-file-instances=-1 --mysqld=--loose-performance-schema-max-socket-instances=-1 --mysqld=--loose-performance-schema-max-table-instances=-1 --mysqld=--loose-performance-schema-max-table-lock-stat=-1 --mysqld=--loose-performance-schema-max-index-stat=-1 --mysqld=--loose-performance-schema-max-table-handles=-1 --mysqld=--loose-performance-schema-max-prepared-statements-instances=-1 --mysqld=--loose-performance-schema-max-program-instances=-1 --mysqld=--loose-performance-schema-setup-actors-size=-1 --mysqld=--loose-performance-schema-setup-objects-size=-1 --mysqld=--loose-performance-schema-events-waits-history-size=-1 --mysqld=--loose-performance-schema-events-waits-history-long-size=-1 --mysqld=--loose-performance-schema-events-stages-history-size=-1 --mysqld=--loose-performance-schema-events-stages-history-long-size=-1 --mysqld=--loose-performance-schema-events-statements-history-size=-1 --mysqld=--loose-performance-schema-events-statements-history-long-size=-1 --mysqld=--loose-performance-schema-events-transactions-history-size=-1 --mysqld=--loose-performance-schema-events-transactions-history-long-size=-1 --mysqld=--loose-performance-schema-max-thread-instances=-1 --mysqld=--loose-performance-schema-session-connect-attrs-size=-1 --mysqld=--loose-performance-schema-max-metadata-locks=-1 --mysqld=--loose-performance-schema-instrument= --mysqld=--loose-performance-schema-consumer-events-stages-current=FALSE --mysqld=--loose-performance-schema-consumer-events-stages-history=FALSE --mysqld=--loose-performance-schema-consumer-events-stages-history-long=FALSE --mysqld=--loose-performance-schema-consumer-events-statements-current=FALSE --mysqld=--loose-performance-schema-consumer-events-statements-history=FALSE --mysqld=--loose-performance-schema-consumer-events-statements-history-long=FALSE --mysqld=--loose-performance-schema-consumer-events-transactions-current=FALSE --mysqld=--loose-performance-schema-consumer-events-transactions-history=FALSE --mysqld=--loose-performance-schema-consumer-events-transactions-history-long=FALSE --mysqld=--loose-performance-schema-consumer-events-waits-current=FALSE --mysqld=--loose-performance-schema-consumer-events-waits-history=FALSE --mysqld=--loose-performance-schema-consumer-events-waits-history-long=FALSE --mysqld=--loose-performance-schema-consumer-global-instrumentation=TRUE --mysqld=--loose-performance-schema-consumer-thread-instrumentation=TRUE --mysqld=--binlog-direct-non-transactional-updates=FALSE --mysqld=--default-storage-engine=InnoDB --mysqld=--use-stat-tables=PREFERABLY_FOR_QUERIES --mysqld=--histogram-type=JSON_HB --mysqld=--loose-plugin-innodb --mysqld=--loose-plugin-innodb-buffer-page-lru --mysqld=--loose-plugin-innodb-buffer-pool-stats --mysqld=--loose-plugin-innodb-cmp --mysqld=--loose-plugin-innodb-cmp-per-index --mysqld=--loose-plugin-innodb-cmp-per-index-reset --mysqld=--loose-plugin-innodb-cmp-reset --mysqld=--loose-plugin-innodb-cmpmem --mysqld=--loose-plugin-innodb-cmpmem-reset --mysqld=--loose-plugin-innodb-ft-being-deleted --mysqld=--loose-plugin-innodb-ft-config --mysqld=--loose-plugin-innodb-ft-default-stopword --mysqld=--loose-plugin-innodb-ft-deleted --mysqld=--loose-plugin-innodb-ft-index-cache --mysqld=--loose-plugin-innodb-ft-index-table --mysqld=--loose-plugin-innodb-sys-fields --mysqld=--loose-plugin-innodb-sys-foreign --mysqld=--loose-plugin-innodb-sys-foreign-cols --mysqld=--loose-plugin-innodb-sys-indexes --mysqld=--loose-plugin-innodb-sys-tables --mysqld=--loose-plugin-innodb-sys-tablespaces --mysqld=--loose-plugin-innodb-sys-tablestats --mysqld=--loose-plugin-innodb-sys-virtual --mysqld=--loose-plugin-innodb-tablespaces-encryption --mysqld=--loose-plugin-partition --mysqld=--loose-plugin-sequence --mysqld=--loose-plugin-thread-pool-groups --mysqld=--loose-plugin-thread-pool-queues --mysqld=--loose-plugin-thread-pool-stats --mysqld=--loose-plugin-thread-pool-waits --mysqld=--loose-plugin-unix-socket --mysqld=--loose-plugin-user-variables --mysqld=--loose-plugin-wsrep-provider --mysqld=--loose-disable-performance-schema --mysqld=--general-log=FALSE --mysqld=--general-log-file=poodle.log --mysqld=--slow-query-log=FALSE --mysqld=--slow-query-log-file=poodle-slow.log --mysqld=--plugin-maturity=experimental --mysqld=--system_versioning_alter_history=KEEP --mysqld=--secure-timestamp=SUPER --mysqld=--query-cache-size=128K --mysqld=--concurrent_insert=NEVER --mysqld=--autocommit=OFF --mysqld=--eq_range_index_dive_limit=0 --mysqld=--histogram_type=JSON_HB  --repeat=200 --rr=-h
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h 5m
                  1h 5m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.