MDEV-36067 Assertion failure in TABLE_SHARE::init_from_sql_statement_string

is_package_public_routine() ignores errors that might've
happened during its execution and does not return an error status
to the caller. Thus there must be no errors during its execution.